[project]

name = "huff-cli"

version = "1.0.0"

description = "CLI for data compression based on the Huffman algorithm"

authors = [
    { name = "Gellert Ilya", email = "gellertilya.job@gmail.com" },
]

readme = "README.md"

requires-python = ">=3.8"

dependencies = [
    "aiofiles",
]

[project.scripts]

huff-cli = "huff_cli.cli:run"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"